[package]
name = "cc-downloader"
version = "0.2.0"
edition = "2021"
authors = ["Pedro Ortiz Suarez <pedro@commoncrawl.org>"]
description = "A polite and user-friendly downloader for Common Crawl data."
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
clap = { version = "4.5.16", features = ["derive"] }
flate2 = "1.0.32"
futures = "0.3.30"
indicatif = "0.17.8"
reqwest = { version = "0.12.7", default-features = false, features = [
    "stream",
    "rustls-tls",
] }
reqwest-middleware = "0.3.3"
reqwest-retry = "0.6.1"
tokio = { version = "1.39.3", features = ["full"] }
tokio-util = { version = "0.7.11", features = ["compat"] }
url = "2.5.2"
