[package]
name = "cc-downloader"
version = "0.4.0"
edition = "2021"
authors = ["Pedro Ortiz Suarez <pedro@commoncrawl.org>"]
description = "A polite and user-friendly downloader for Common Crawl data."
license = "MIT OR Apache-2.0"
rust-version = "1.83"
readme = "README.md"
homepage = "https://commoncrawl.org"
repository = "https://github.com/pjox/cc-downloader"
documentation = "https://docs.rs/cc-downloader"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
flate2 = "1.0.35"
futures = "0.3.31"
indicatif = "0.17.9"
reqwest = { version = "0.12.9", default-features = false, features = [
    "stream",
    "rustls-tls",
] }
reqwest-middleware = "0.4.0"
reqwest-retry = "0.7.0"
tokio = { version = "1.42.0", features = ["full"] }
tokio-util = { version = "0.7.13", features = ["compat"] }
url = "2.5.4"
